src/app/components/assessment-menu/assessment-menu.component.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

.btn-report {
  width: 13.125em;
  height: 2.8125em;
  text-align: center;
  line-height: 1em;
  font-weight: bold;
  font-variant: normal;
  font-style: normal;
  font-size: 1em;
  font-family: 'Inter', sans-serif;
  letter-spacing: 1.42px;
  color: #FFFFFF;
  text-transform: capitalize;
  background: #32616E 0% 0% no-repeat padding-box;
  box-shadow: 0px 2px 2px #00000024;
  border-radius: .4em;
  opacity: 1;
  margin-right: 1em;
}

.btn-finish{
  width: 13.125em;
  height: 2.8125em;
  /* UI Properties */
  background: var(--unnamed-color-6d9d79) 0% 0% no-repeat padding-box;
  background: #6D9D79 0% 0% no-repeat padding-box;
  box-shadow: 0px 2px 2px #00000024;
  border-radius: 4px;
  opacity: 1;
  text-align: center;
  line-height: 1em;
  font-weight: bold;
  font-variant: normal;
  font-style: normal;
  font-size: 1em;
  font-family: 'Inter', sans-serif;
  letter-spacing: 1.42px;
  color: #FFFFFF;
}

.btn-reopen{
  width: 13.125em;
  height: 2.8125em;
  /* UI Properties */
  background: var(--unnamed-color-4ba1ac) 0% 0% no-repeat padding-box;
  background: #4BA1AC 0% 0% no-repeat padding-box;
  box-shadow: 0px 2px 2px #00000024;
  border-radius: 4px;
  opacity: 1;
  text-align: center;
  line-height: 1em;
  font-weight: bold;
  font-variant: normal;
  font-style: normal;
  font-size: 1em;
  font-family: 'Inter', sans-serif;
  letter-spacing: 1.42px;
  color: #FFFFFF;
}


.menuButton{
  margin-left: 1.3em;
  display: inline-grid;
}

.menuIcon{
  width: 2.5em;
  height: 2.8125em
}

